# proiect-ml-Dsescu

proiect-ml/: Home.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
proiect-ml/notebooks/: Clasificare_Heart_Disease.ipynb  Regresie_Cost_Medica.ipynb  regression_insurance_complete.ipynb
proiect-ml/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
proiect-ml/notebooks/catboost_info/learn/: events.out.tfevents
proiect-ml/outputs/classification/: baseline_metrics.csv  best_params.json  metadata.json  tuned_metrics.csv
proiect-ml/outputs/classification/figures/eda/: eda_plot_paths.json
proiect-ml/outputs/classification/figures/learning_curves/: learning_curve_paths.json
proiect-ml/outputs/classification/figures/shap/: shap_plot_paths.json  shap_top_features_catboost.json  shap_top_features_explainable_boosting_machine.json  shap_top_features_logistic_regression.json  shap_top_features_random_forest.json  (+1 more)
proiect-ml/outputs/classification/models/: catboost.joblib  explainable_boosting_machine.joblib  logistic_regression.joblib  random_forest.joblib  support_vector_machine.joblib
proiect-ml/outputs/regression/: baseline_metrics.csv  best_params.json  metadata.json  tuned_metrics.csv
proiect-ml/outputs/regression/models/: catboost_regressor.joblib  explainable_boosting_regressor.joblib  linear_regression.joblib  random_forest_regressor.joblib  xgboost_regressor.joblib
proiect-ml/pages/: 1_Clasificare_Heart_Disease.py  2_Regresie_Insurance.py
proiect-ml/src/: ml_utils.py  streamlit_page.py  train_all.py
(+8 files in other folders)
